# DeviceSpoofLab-Hooks

./: .gitignore  README.md  device_profile.conf
app/: build.gradle.kts
app/src/main/: AndroidManifest.xml
app/src/main/cpp/: CMakeLists.txt  dlopen_hook.cpp  ds_state.h  native_hooks.cpp  property_hooks.cpp  system_hooks.cpp
app/src/main/java/com/devicespooflab/hooks/: MainActivity.java  MainHook.java  NativeHooks.java  XposedModuleImpl.java
app/src/main/java/com/devicespooflab/hooks/hooks/: AccountHooks.java  AdvertisingIdHooks.java  AppSetIdHooks.java  BatteryHooks.java  BuildHooks.java  CameraHooks.java  DisplayHooks.java  EuiccHooks.java  HardwareHooks.java  InputDeviceHooks.java  LocaleHooks.java  MediaDrmHooks.java  NetworkHooks.java  PackageInfoHooks.java  PackageManagerHooks.java  SensorHooks.java  SettingsHooks.java  StorageHooks.java  SystemPropertiesHooks.java  TelephonyHooks.java  WebViewHooks.java
app/src/main/java/com/devicespooflab/hooks/ui/: AndroidVersionTable.java  IdentifierItem.java  IdentifierRegistry.java
app/src/main/java/com/devicespooflab/hooks/utils/: ConfigManager.java  RandomGenerator.java  XposedServiceBridge.java
app/src/main/res/drawable/: bg_timezone_chip.xml  ic_arrow_drop_down.xml  ic_copy.xml  ic_edit.xml  ic_refresh.xml  ic_warning.xml
app/src/main/res/layout/: activity_main.xml  dialog_timezone_picker.xml  item_identifier.xml  section_header.xml
app/src/main/res/values/: colors.xml  strings.xml  themes.xml
